--- a/capec_map.ipynb
+++ b/capec_map.ipynb
@@ -2,35 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "a37b6452-0727-4e61-8558-0befcd62ce7f",
+   "execution_count": null,
+   "id": "0eaf8168-0c58-445c-b60e-3f4f3f4142b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyvis import network as net\n",
-    "import matplotlib.pyplot as plt\n",
-    "import networkx as nx"
+    "from pyvis import network as net"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "1709303b-3635-4aa3-a844-c1826987cbc9",
+   "execution_count": null,
+   "id": "61fa092e-daee-4e0a-95f1-9bbaa841e233",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "non existent node '660'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_2068/900669701.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    954\u001b[0m \u001b[0mg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_edge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m641\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m658\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    955\u001b[0m \u001b[0mg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_edge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m641\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m659\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 956\u001b[0;31m \u001b[0mg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_edge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m641\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m660\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    957\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    958\u001b[0m \u001b[0mg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'capec.html'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.9/site-packages/pyvis/network.py\u001b[0m in \u001b[0;36madd_edge\u001b[0;34m(self, source, to, **options)\u001b[0m\n\u001b[1;32m    338\u001b[0m             \u001b[0;34m\"non existent node '\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msource\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"'\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    339\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 340\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0mto\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_nodes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    341\u001b[0m             \u001b[0;34m\"non existent node '\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"'\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    342\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: non existent node '660'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "g=net.Network(height=\"750px\", width=\"100%\", bgcolor=\"#222222\", font_color=\"white\", notebook=True)\n",
     "g.add_nodes([1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20], label=['name','id','abstraction', 'status', 'Description', 'Alternate Terms', 'Likelihood of Attack', 'Typical Severity', 'Related Attack Patterns', 'Execution Flow', 'Prerequisites', 'Skills Required', 'Resources Required', 'Indicators', 'Consequenses', 'Mitigations', 'Example Instances', 'Related Weaknesses', 'Taxonomy Mappings', 'Notes'], title=['Accessing Functionality Not Properly Constrained by ACLs', '1', 'Standard', 'Draft', 'In applications, particularly web applications, access to functionality is mitigated by an authorization framework. This framework maps Access Control Lists (ACLs) to elements of the application\\'s functionality; particularly URL\\'s for web apps. In the case that the administrator failed to specify an ACL for a particular element, an attacker may be able to access it with impunity. An attacker with the ability to access functionality not properly constrained by ACLs can obtain sensitive information and possibly compromise the entire application. Such an attacker can access resources that must be available only to users at a higher privilege level, can access management sections of the application, or can run queries for data that they otherwise not supposed to.',\n",
@@ -989,23 +974,36 @@
     "g.add_edge(641, 659)\n",
     "g.add_edge(641, 660)\n",
     "\n",
-    "g.add_nodes(661,662,663,664,665,666,667,668,669,670,671,672,673,674,675,676,677,678,679,680], label=['name','id','abstraction', 'status', 'Description', 'Alternate Terms', 'Likelihood of Attack', 'Typical Severity', 'Related Attack Patterns', 'Execution Flow', 'Prerequisites', 'Skills Required', 'Resources Required', 'Indicators', 'Consequenses', 'Mitigations', 'Example Instances', 'Related Weaknesses', 'Taxonomy Mappings', 'Notes'], title=[\"Signing Malicious Code\",\"206\",\"Detailed\",\"Draft\",\n",
+    "g.add_nodes([661,662,663,664,665,666,667,668,669,670,671,672,673,674,675,676,677,678,679,680], label=['name','id','abstraction', 'status', 'Description', 'Alternate Terms', 'Likelihood of Attack', 'Typical Severity', 'Related Attack Patterns', 'Execution Flow', 'Prerequisites', 'Skills Required', 'Resources Required', 'Indicators', 'Consequenses', 'Mitigations', 'Example Instances', 'Related Weaknesses', 'Taxonomy Mappings', 'Notes'], title=[\"Signing Malicious Code\",\"206\",\"Detailed\",\"Draft\",\n",
     "                                                                                                     \"The adversary extracts credentials used for code signing from a production environment and then uses these credentials to sign malicious content with the developer's key. Many developers use signing keys to sign code or hashes of code. When users or applications verify the signatures are accurate they are led to believe that the code came from the owner of the signing key and that the code has not been modified since the signature was applied. If the adversary has extracted the signing credentials then they can use those credentials to sign their own code bundles. Users or tools that verify the signatures attached to the code will likely assume the code came from the legitimate developer and install or run the code, effectively allowing the adversary to execute arbitrary code on the victim's computer. This differs from CAPEC-673, because the adversary is performing the code signing.\",\n",
     "                                                                                                     \"NULL\",\"NULL\",\"VERY HIGH\",\"::NATURE:ChildOf:CAPEC ID:444::\",\n",
     "                                                                                                     \"::STEP:1:PHASE:Explore:DESCRIPTION:The adversary first attempts to obtain a digital certificate in order to sign their malware or tools. This certificate could be stolen, created by the adversary, or acquired normally through a certificate authority.::STEP:2:PHASE:Explore:DESCRIPTION:Based on the type of certificate obtained, the adversary will create a goal for their attack. This is either a broad or targeted attack. If an adversary was able to steal a certificate from a targeted organization, they could target this organization by pretending to have legitimate code signed by them. In other cases, the adversary would simply sign their malware and pose as legitimate software such that any user might trust it. This is the more broad approach::STEP:3:PHASE:Experiment:DESCRIPTION:The adversary creates their malware and signs it with the obtained digital certificate. The adversary then checks if the code that they signed is valid either through downloading from the targeted source or testing locally.::STEP:4:PHASE:Exploit:DESCRIPTION:Once the malware has been signed, it is then deployed to the desired location. They wait for a trusting user to run their malware, thinking that it is legitimate software. This malware could do a variety of things based on the motivation of the adversary.::\",\n",
-    "                                                                                                     \"::The targeted developer must use a signing key to sign code bundles. (Note that not doing this is not a defense - it only means that the adversary does not need to steal the signing key before forging code bundles in the developer's name.)::\",\"NULL\",\"::None: No specialized resources are required to execute this type of attack.::\",\"NULL\"\n",
-    "                                                                                                     \n",
+    "                                                                                                     \"::The targeted developer must use a signing key to sign code bundles. (Note that not doing this is not a defense - it only means that the adversary does not need to steal the signing key before forging code bundles in the developer's name.)::\",\"NULL\",\"::None: No specialized resources are required to execute this type of attack.::\",\"NULL\",\"NULL\",\"::Ensure digital certificates are protected and inaccessible by unauthorized uses.::If a digital certificate has been compromised it should be revoked and regenerated.::Even if a piece of software has a valid and trusted digital signature, it should be assessed for any weaknesses and vulnerabilities.::\",\n",
+    "                                                                                                     \"::In the famous Stuxnet malware incident, two digital certificates were compromised in order to sign malicious device drivers with legitimate credentials. The signing resulted in the malware appearing as trusted by the system it was running on, which facilitated the installation of the malware in kernel mode. This further resulted in Stuxnet remaining undetected for a significant amount of time. [REF-699]::The cyber espionage group CyberKittens leveraged a stolen certificate from AI Squared that allowed them to leverage a signed executable within Operation Wilted Tulip. This ultimately allowed the executable to run as trusted on the system, allowing a Crowd Strike stager to be loaded within the system's memory. [REF-714]::\",\n",
+    "                                                                                                     \"::732::\",\"TAXONOMY NAME:ATTACK:ENTRY ID:1553.002:ENTRY NAME:Subvert Trust Controls:Code Signing::\",\"NULL\"])\n",
+    "g.add_edge(661, 662)\n",
+    "g.add_edge(661, 663)\n",
+    "g.add_edge(661, 664)\n",
+    "g.add_edge(661, 665)\n",
+    "g.add_edge(661, 666)\n",
+    "g.add_edge(661, 667)\n",
+    "g.add_edge(661, 668)\n",
+    "g.add_edge(661, 669)\n",
+    "g.add_edge(661, 670)\n",
+    "g.add_edge(661, 671)\n",
+    "g.add_edge(661, 672)\n",
+    "g.add_edge(661, 673)\n",
+    "g.add_edge(661, 674)\n",
+    "g.add_edge(661, 675)\n",
+    "g.add_edge(661, 676)\n",
+    "g.add_edge(661, 677)\n",
+    "g.add_edge(661, 678)\n",
+    "g.add_edge(661, 679)\n",
+    "g.add_edge(661, 680)\n",
     "\n",
-    "g.show('capec.html')"
+    "g.show('capec.html')\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3acb75b-42be-4e32-9539-a0bb6a21458c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1024,7 +1022,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
