continued editing notebook

--- a/capec_map.ipynb
+++ b/capec_map.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0eaf8168-0c58-445c-b60e-3f4f3f4142b8",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "61fa092e-daee-4e0a-95f1-9bbaa841e233",
    "metadata": {},
    "outputs": [
@@ -38,10 +38,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f3f2709b310>"
+       "<IPython.lib.display.IFrame at 0x7fb4344288e0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,6 +1030,122 @@
     "g.add_edge(661, 678)\n",
     "g.add_edge(661, 679)\n",
     "g.add_edge(661, 680)\n",
+    "\n",
+    "g.add_nodes([681,682,683,684,685,686,687,688,689,690,691,692,693,694,695,696,697,698,699,700], label=['name','id','abstraction', 'status', 'Description', 'Alternate Terms', 'Likelihood of Attack', 'Typical Severity', 'Related Attack Patterns', 'Execution Flow', 'Prerequisites', 'Skills Required', 'Resources Required', 'Indicators', 'Consequenses', 'Mitigations', 'Example Instances', 'Related Weaknesses', 'Taxonomy Mappings', 'Notes'], title=[\"Exploitation of Trusted Identifiers\",\"21\",\"Meta\",\"Stable\",\"An adversary guesses, obtains, or rides a trusted identifier (e.g. session ID, resource ID, cookie, etc.) to perform authorized actions under the guise of an authenticated user or service.\",\n",
+    "                                                                                                      'NULL','HIGH','HIGH','NULL',\"::STEP:1:PHASE:Explore:DESCRIPTION:[Survey the application for Indicators of Susceptibility] Using a variety of methods, until one is found that applies to the target, the adversary probes for cookies, session tokens, or entry points that bypass identifiers altogether.TECHNIQUE:Spider all available pages:TECHNIQUE:Attack known bad interfaces:TECHNIQUE:Search outward-facing configuration and properties files for identifiers.::STEP:2:PHASE:Experiment:DESCRIPTION:[Fetch samples] The adversary fetches many samples of identifiers. This may be through legitimate access (logging in, legitimate connections, etc.) or via systematic probing.TECHNIQUE:An adversary makes many anonymous connections and records the session IDs assigned.:TECHNIQUE:An adversary makes authorized connections and records the session tokens or credentials issued.:TECHNIQUE:An adversary gains access to (legitimately or illegitimately) a nearby system (e.g., in the same operations network, DMZ, or local network) and makes a connection from it, attempting to gain the same privileges as a trusted system.::STEP:3:PHASE:Exploit:DESCRIPTION:[Impersonate] An adversary can use successful experiments or authentications to impersonate an authorized user or system or to laterally move within a system or application::STEP:4:PHASE:Exploit:DESCRIPTION:[Spoofing] Malicious data can be injected into the target system or into a victim user's system by an adversary. The adversary can also pose as a legitimate user to perform social engineering attacks.::STEP:5:PHASE:Exploit:DESCRIPTION:[Data Exfiltration] The adversary can obtain sensitive data contained within the system or application.::\",\n",
+    "                                                                                                      \"::Server software must rely on weak identifier proof and/or verification schemes.::Identifiers must have long lifetimes and potential for reusability.::Server software must allow concurrent sessions to exist.::\",\n",
+    "                                                                                                      \"::SKILL:To achieve a direct connection with the weak or non-existent server session access control, and pose as an authorized user:LEVEL:Low::\",\"::Ability to deploy software on network.::Ability to communicate synchronously or asynchronously with server.::\",'NULL',\n",
+    "                                                                                                      \"::SCOPE:Confidentiality:SCOPE:Access Control:SCOPE:AuthenticationTECHNICAL IMPACT:Gain Privileges::SCOPE:ConfidentialityTECHNICAL IMPACT:Read Data::SCOPE:IntegrityTECHNICAL IMPACT:Modify Data::\",\"::Design: utilize strong federated identity such as SAML to encrypt and sign identity tokens in transit.::Implementation: Use industry standards session key generation mechanisms that utilize high amount of entropy to generate the session key. Many standard web and application servers will perform this task on your behalf.::Implementation: If the identifier is used for authentication, such as in the so-called single sign on use cases, then ensure that it is protected at the same level of assurance as authentication tokens.::Implementation: If the web or application server supports it, then encrypting and/or signing the identifier (such as cookie) can protect the ID if intercepted.::Design: Use strong session identifiers that are protected in transit and at rest.::Implementation: Utilize a session timeout for all sessions, for example 20 minutes. If the user does not explicitly logout, the server terminates their session after this period of inactivity. If the user logs back in then a new session key is generated.::Implementation: Verify authenticity of all identifiers at runtime.::\",\n",
+    "                                                                                                      \"::Thin client applications like web applications are particularly vulnerable to session ID attacks. Since the server has very little control over the client, but still must track sessions, data, and objects on the server side, cookies and other mechanisms have been used to pass the key to the session data between the client and server. When these session keys are compromised it is trivial for an adversary to impersonate a user's session in effect, have the same capabilities as the authorized user. There are two main ways for an adversary to exploit session IDs. A brute force attack involves an adversary repeatedly attempting to query the system with a spoofed session header in the HTTP request. A web server that uses a short session ID can be easily spoofed by trying many possible combinations so the parameters session-ID= 1234 has few possible combinations, and an adversary can retry several hundred or thousand request with little to no issue on their side. The second method is interception, where a tool such as wireshark is used to sniff the wire and pull off any unprotected session identifiers. The adversary can then use these variables and access the application.::For example, in a message queuing system that allows service requesters to post messages to its queue through an open channel (such as anonymous FTP), authorization is done through checking group or role membership contained in the posted message. However, there is no proof that the message itself, the information in the message (such group or role membership), or the process that wrote the message to the queue is authentic and authorized to do so.::\",\n",
+    "                                                                                                      \"::290::302::346::539::6::384::664::602::642::\",\"TAXONOMY NAME:ATTACK:ENTRY ID:1134:ENTRY NAME:Access Token Manipulation::::TAXONOMY NAME:ATTACK:ENTRY ID:1528:ENTRY NAME:Steal Application Access Token::::TAXONOMY NAME:ATTACK:ENTRY ID:1539:ENTRY NAME:Steal Web Session Cookie::\",\"NUL\"])\n",
+    "g.add_edge(681, 682)\n",
+    "g.add_edge(681, 683)\n",
+    "g.add_edge(681, 684)\n",
+    "g.add_edge(681, 685)\n",
+    "g.add_edge(681, 686)\n",
+    "g.add_edge(681, 687)\n",
+    "g.add_edge(681, 688)\n",
+    "g.add_edge(681, 689)\n",
+    "g.add_edge(681, 690)\n",
+    "g.add_edge(681, 691)\n",
+    "g.add_edge(681, 692)\n",
+    "g.add_edge(681, 693)\n",
+    "g.add_edge(681, 694)\n",
+    "g.add_edge(681, 695)\n",
+    "g.add_edge(681, 696)\n",
+    "g.add_edge(681, 697)\n",
+    "g.add_edge(681, 698)\n",
+    "g.add_edge(681, 699)\n",
+    "g.add_edge(681, 700)\n",
+    "\n",
+    "g.add_nodes([701,702,703,704,705,706,707,708,709,710,711,712,713,714,715,716,717,718,719,720], label=['name','id','abstraction', 'status', 'Description', 'Alternate Terms', 'Likelihood of Attack', 'Typical Severity', 'Related Attack Patterns', 'Execution Flow', 'Prerequisites', 'Skills Required', 'Resources Required', 'Indicators', 'Consequenses', 'Mitigations', 'Example Instances', 'Related Weaknesses', 'Taxonomy Mappings', 'Notes'], title=[\"Sustained Client Engagement\",\n",
+    "                                                                                                      \"227\",\n",
+    "                                                                                                      \"Meta\",\n",
+    "                                                                                                      \"Draft\",\n",
+    "                                                                                                      \"An adversary attempts to deny legitimate users access to a resource by continually engaging a specific resource in an attempt to keep the resource tied up as long as possible. The adversary's primary goal is not to crash or flood the target, which would alert defenders; rather it is to repeatedly perform actions or abuse algorithmic flaws such that a given resource is tied up and not available to a legitimate user. By carefully crafting a requests that keep the resource engaged through what is seemingly benign requests, legitimate users are limited or completely denied access to the resource.\",\n",
+    "                                                                                                      'NULL',\n",
+    "                                                                                                      'NULL',\n",
+    "                                                                                                      'NULL',\n",
+    "                                                                                                      'NULL',\n",
+    "                                                                                                      'NULL',\n",
+    "                                                                                                      \"::This pattern of attack requires a temporal aspect to the servicing of a given request. Success can be achieved if the adversary can make requests that collectively take more time to complete than legitimate user requests within the same time frame.::\",\n",
+    "                                                                                                      'NULL',\n",
+    "                                                                                                      \"::To successfully execute this pattern of attack, a script or program is often required that is capable of continually engaging the target and maintaining sustained usage of a specific resource. Depending on the configuration of the target, it may or may not be necessary to involve a network or cluster of objects all capable of making parallel requests.::\",\n",
+    "                                                                                                      'NULL',\n",
+    "                                                                                                      'NULL',\n",
+    "                                                                                                      \"::Potential mitigations include requiring a unique login for each resource request, constraining local unprivileged access by disallowing simultaneous engagements of the resource, or limiting access to the resource to one access per IP address. In such scenarios, the adversary would have to increase engagements either by launching multiple sessions manually or programmatically to counter such defenses.::\",\n",
+    "                                                                                                      'NULL',\n",
+    "                                                                                                      'NULL',\n",
+    "                                                                                                      \"TAXONOMY NAME:ATTACK:ENTRY ID:1499:ENTRY NAME:Endpoint Denial of Service::::TAXONOMY NAME:WASC:ENTRY ID:10:ENTRY NAME:Denial of Service::\",\n",
+    "                                                                                                      'NULL'])\n",
+    "g.add_edge(701, 702)\n",
+    "g.add_edge(701, 704)\n",
+    "g.add_edge(701, 705)\n",
+    "g.add_edge(701, 706)\n",
+    "g.add_edge(701, 707)\n",
+    "g.add_edge(701, 708)\n",
+    "g.add_edge(701, 709)\n",
+    "g.add_edge(701, 710)\n",
+    "g.add_edge(701, 711)\n",
+    "g.add_edge(701, 712)\n",
+    "g.add_edge(701, 713)\n",
+    "g.add_edge(701, 714)\n",
+    "g.add_edge(701, 715)\n",
+    "g.add_edge(701, 716)\n",
+    "g.add_edge(701, 717)\n",
+    "g.add_edge(701, 718)\n",
+    "g.add_edge(701, 719)\n",
+    "g.add_edge(701, 720)\n",
+    "\n",
+    "g.add_nodes([721,722,723,724,725,726,727,728,729,730,731,732,733,734,735,736,737,738,739,740], label=['name','id','abstraction', 'status', 'Description', 'Alternate Terms', 'Likelihood of Attack', 'Typical Severity', 'Related Attack Patterns', 'Execution Flow', 'Prerequisites', 'Skills Required', 'Resources Required', 'Indicators', 'Consequenses', 'Mitigations', 'Example Instances', 'Related Weaknesses', 'Taxonomy Mappings', 'Notes'], title=[\"Privilege Escalation\",\"233\",\"Meta\",\"Draft\",\n",
+    "                                                                                                      \"An adversary exploits a weakness enabling them to elevate their privilege and perform an action that they are not supposed to be authorized to perform.',\",'NULL','NULL','NULL','NULL','NULL','NULL','NULL','NULL','NULL','NULL','NULL','NULL',\"::269::1264::1311::\",\"TAXONOMY NAME:ATTACK:ENTRY ID:1548:ENTRY NAME:Abuse Elevation Control Mechanism::\",'NULL'])\n",
+    "g.add_edge(721, 722)\n",
+    "g.add_edge(721, 723)\n",
+    "g.add_edge(721, 724)\n",
+    "g.add_edge(721, 725)\n",
+    "g.add_edge(721, 726)\n",
+    "g.add_edge(721, 727)\n",
+    "g.add_edge(721, 728)\n",
+    "g.add_edge(721, 729)\n",
+    "g.add_edge(721, 730)\n",
+    "g.add_edge(721, 731)\n",
+    "g.add_edge(721, 732)\n",
+    "g.add_edge(721, 733)\n",
+    "g.add_edge(721, 734)\n",
+    "g.add_edge(721, 735)\n",
+    "g.add_edge(721, 736)\n",
+    "g.add_edge(721, 737)\n",
+    "g.add_edge(721, 738)\n",
+    "g.add_edge(721, 739)\n",
+    "g.add_edge(721, 740)\n",
+    "\n",
+    "g.add_nodes([741,742,743,744,745,746,747,748,749,750,751,752,753,754,755,756,757,758,759,760], label=['name','id','abstraction', 'status', 'Description', 'Alternate Terms', 'Likelihood of Attack', 'Typical Severity', 'Related Attack Patterns', 'Execution Flow', 'Prerequisites', 'Skills Required', 'Resources Required', 'Indicators', 'Consequenses', 'Mitigations', 'Example Instances', 'Related Weaknesses', 'Taxonomy Mappings', 'Notes'], title=[\"Forced Deadlock\",\"25\",\"Meta\",\"Stable\",\n",
+    "                                                                                                      \"The adversary triggers and exploits a deadlock condition in the target software to cause a denial of service. A deadlock can occur when two or more competing actions are waiting for each other to finish, and thus neither ever does. Deadlock conditions can be difficult to detect.\",'NULL','LOW','HIGH','NULL',\n",
+    "                                                                                                      \"::STEP:1:PHASE:Explore:DESCRIPTION:The adversary initiates an exploratory phase to get familiar with the system.::STEP:2:PHASE:Explore:DESCRIPTION:The adversary triggers a first action (such as holding a resource) and initiates a second action which will wait for the first one to finish.::STEP:3:PHASE:Explore:DESCRIPTION:If the target program has a deadlock condition, the program waits indefinitely resulting in a denial of service.::\",\n",
+    "                                                                                                      \"::The target host has a deadlock condition. There are four conditions for a deadlock to occur, known as the Coffman conditions. [REF-101]::The target host exposes an API to the user.::\",\"::SKILL:This type of attack may be sophisticated and require knowledge about the system's resources and APIs.:LEVEL:Medium::\",'NULL','NULL',\n",
+    "                                                                                                      \"::SCOPE:AvailabilityTECHNICAL IMPACT:Resource Consumption:NOTE:Availability Resource Consumption A successful forced deadlock attack compromises the availability of the system by exhausting its available resources.::\",\"::Use known algorithm to avoid deadlock condition (for instance non-blocking synchronization algorithms).::For competing actions, use well-known libraries which implement synchronization.::\",\n",
+    "                                                                                                      \"::An example of a deadlock which may occur in database products is the following. Client applications using the database may require exclusive access to a table, and in order to gain exclusive access they ask for a lock. If one client application holds a lock on a table and attempts to obtain the lock on a second table that is already held by a second client application, this may lead to deadlock if the second application then attempts to obtain the lock that is held by the first application (Source: Wikipedia, http://en.wikipedia.org/wiki/Deadlock)::\",\n",
+    "                                                                                                      \"::412::567::662::667::833::1322::\",\"TAXONOMY NAME:ATTACK:ENTRY ID:1499.004:ENTRY NAME:Endpoint Denial of Service: Application or System Exploitation::\",'NULL'])\n",
+    "g.add_edge(741, 742)\n",
+    "g.add_edge(741, 743)\n",
+    "g.add_edge(741, 744)\n",
+    "g.add_edge(741, 745)\n",
+    "g.add_edge(741, 746)\n",
+    "g.add_edge(741, 747)\n",
+    "g.add_edge(741, 748)\n",
+    "g.add_edge(741, 749)\n",
+    "g.add_edge(741, 750)\n",
+    "g.add_edge(741, 751)\n",
+    "g.add_edge(741, 752)\n",
+    "g.add_edge(741, 753)\n",
+    "g.add_edge(741, 754)\n",
+    "g.add_edge(741, 755)\n",
+    "g.add_edge(741, 756)\n",
+    "g.add_edge(741, 757)\n",
+    "g.add_edge(741, 758)\n",
+    "g.add_edge(741, 759)\n",
+    "g.add_edge(741, 760)\n",
+    "\n",
     "\n",
     "g.show('index.html')\n",
     "\n"
