checkpoint after adding multiple node maps

--- a/capec_map.ipynb
+++ b/capec_map.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "0eaf8168-0c58-445c-b60e-3f4f3f4142b8",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "61fa092e-daee-4e0a-95f1-9bbaa841e233",
    "metadata": {},
    "outputs": [
@@ -38,10 +38,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fb4344288e0>"
+       "<IPython.lib.display.IFrame at 0x7f73fb7fbfd0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,8 +1146,75 @@
     "g.add_edge(741, 759)\n",
     "g.add_edge(741, 760)\n",
     "\n",
+    "g.add_nodes([761,762,763,764,765,766,767,768,769,770,771,772,773,774,775,776,777,778,779,780], label=['name','id','abstraction', 'status', 'Description', 'Alternate Terms', 'Likelihood of Attack', 'Typical Severity', 'Related Attack Patterns', 'Execution Flow', 'Prerequisites', 'Skills Required', 'Resources Required', 'Indicators', 'Consequenses', 'Mitigations', 'Example Instances', 'Related Weaknesses', 'Taxonomy Mappings', 'Notes'], title=[\"Local Code Inclusion\",\n",
+    "                                                                                                      \"251\",\n",
+    "                                                                                                      \"Standard\",\n",
+    "                                                                                                      \"Stable\",\n",
+    "                                                                                                      \"The attacker forces an application to load arbitrary code files from the local machine. The attacker could use this to try to load old versions of library files that have known vulnerabilities, to load files that the attacker placed on the local machine during a prior attack, or to otherwise change the functionality of the targeted application in unexpected ways.\",'NULL','NULL'\"Medium\",\"::NATURE:ChildOf:CAPEC ID:175::\",\n",
+    "                                                                                                      'NULL',\n",
+    "                                                                                                      'NULL',\n",
+    "                                                                                                      \"::The targeted application must have a bug that allows an adversary to control which code file is loaded at some juncture.::Some variants of this attack may require that old versions of some code files be present and in predictable locations.::\",\n",
+    "                                                                                                      'NULL',\n",
+    "                                                                                                      \"::The adversary needs to have enough access to the target application to control the identity of a locally included file. The attacker may also need to be able to upload arbitrary code files to the target machine, although any location for these files may be acceptable.::\",\n",
+    "                                                                                                      'NULL', \n",
+    "                                                                                                      \"::SCOPE:IntegrityTECHNICAL IMPACT:Execute Unauthorized Commands:NOTE:Integrity Execute Unauthorized Commands Through local code inclusion, the adversary compromises the integrity of the application.::SCOPE:ConfidentialityTECHNICAL IMPACT:Read Data:NOTE:Confidentiality Read Data An attacker may leverage local code inclusion in order to print sensitive data to a page, such as hidden configuration files or or password hashes.::\",\n",
+    "                                                                                                      \"::Implementation: Avoid passing user input to filesystem or framework API. If necessary to do so, implement a specific, allowlist approach.::\",\n",
+    "                                                                                                      'NULL',\n",
+    "                                                                                                      \"::829::\",\n",
+    "                                                                                                      \"TAXONOMY NAME:ATTACK:ENTRY ID:1055:ENTRY NAME:Process Injection::\",\n",
+    "                                                                                                      'NULL'])\n",
+    "g.add_edge(761, 762)\n",
+    "g.add_edge(761, 763)\n",
+    "g.add_edge(761, 764)\n",
+    "g.add_edge(761, 765)\n",
+    "g.add_edge(761, 766)\n",
+    "g.add_edge(761, 767)\n",
+    "g.add_edge(761, 768)\n",
+    "g.add_edge(761, 769)\n",
+    "g.add_edge(761, 770)\n",
+    "g.add_edge(761, 771)\n",
+    "g.add_edge(761, 772)\n",
+    "g.add_edge(761, 773)\n",
+    "g.add_edge(761, 774)\n",
+    "g.add_edge(761, 775)\n",
+    "g.add_edge(761, 776)\n",
+    "g.add_edge(761, 777)\n",
+    "g.add_edge(761, 778)\n",
+    "g.add_edge(761, 779)\n",
+    "g.add_edge(761, 780)\n",
+    "\n",
+    "g.add_nodes([781,782,783,784,785,786,787,788,789,790,791,792,793,794,795,796,797,798,799,800], label=['name','id','abstraction', 'status', 'Description', 'Alternate Terms', 'Likelihood of Attack', 'Typical Severity', 'Related Attack Patterns', 'Execution Flow', 'Prerequisites', 'Skills Required', 'Resources Required', 'Indicators', 'Consequenses', 'Mitigations', 'Example Instances', 'Related Weaknesses', 'Taxonomy Mappings', 'Notes'], title=[\"Leverage Alternate Encoding\",\"267\",\"Standard\",\"Draft\",\n",
+    "                                                                                                      \"An adversary leverages the possibility to encode potentially harmful input or content used by applications such that the applications are ineffective at validating this encoding standard.\",'NULL',\"High\",\"High\",\"::NATURE:ChildOf:CAPEC ID:153::\",\"::STEP:1:PHASE:Explore:DESCRIPTION:[Survey the application for user-controllable inputs] Using a browser, an automated tool or by inspecting the application, an adversary records all entry points to the application.TECHNIQUE:Use a spidering tool to follow and record all links and analyze the web pages to find entry points. Make special note of any links that include parameters in the URL.:TECHNIQUE:Use a proxy tool to record all user input entry points visited during a manual traversal of the web application.:TECHNIQUE:Use a browser to manually explore the website and analyze how it is constructed. Many browsers' plugins are available to facilitate the analysis or automate the discovery.:TECHNIQUE:Manually inspect the application to find entry points.::STEP:2:PHASE:Experiment:DESCRIPTION:[Probe entry points to locate vulnerabilities] The adversary uses the entry points gathered in the Explore phase as a target list and injects various payloads using a variety of different types of encodings to determine if an entry point actually represents a vulnerability with insufficient validation logic and to characterize the extent to which the vulnerability can be exploited.TECHNIQUE:Try to use different encodings of content in order to bypass validation routines.::\",\n",
+    "                                                                                                      \"::The application's decoder accepts and interprets encoded characters. Data canonicalization, input filtering and validating is not done properly leaving the door open to harmful characters for the target host.::\",\"::SKILL:An adversary can inject different representation of a filtered character in a different encoding.:LEVEL:Low::SKILL:An adversary may craft subtle encoding of input data by using the knowledge that they have gathered about the target host.:LEVEL:Medium::\",'NULL','NULL',\n",
+    "                                                                                                      \"::SCOPE:IntegrityTECHNICAL IMPACT:Modify Data::SCOPE:ConfidentialityTECHNICAL IMPACT:Read Data::SCOPE:AuthorizationTECHNICAL IMPACT:Execute Unauthorized Commands:NOTE:Authorization Execute Unauthorized Commands Run Arbitrary Code::SCOPE:Accountability:SCOPE:Authentication:SCOPE:Authorization:SCOPE:Non-RepudiationTECHNICAL IMPACT:Gain Privileges::SCOPE:Access Control:SCOPE:AuthorizationTECHNICAL IMPACT:Bypass Protection Mechanism::SCOPE:AvailabilityTECHNICAL IMPACT:Unreliable Execution:TECHNICAL IMPACT:Resource Consumption:NOTE:Availability Unreliable Execution Resource Consumption Denial of Service::\",\n",
+    "                                                                                                      \"::Assume all input might use an improper representation. Use canonicalized data inside the application; all data must be converted into the representation used inside the application (UTF-8, UTF-16, etc.)::Assume all input is malicious. Create an allowlist that defines all valid input to the software system based on the requirements specifications. Input that does not match against the allowlist should not be permitted to enter into the system. Test your decoding process against malicious input.::\",\n",
+    "                                                                                                      \"::Microsoft Internet Explorer 5.01 SP4, 6, 6 SP1, and 7 does not properly handle unspecified encoding strings, which allows remote adversaries to bypass the Same Origin Policy and obtain sensitive information via a crafted web site, aka Post Encoding Information Disclosure Vulnerability. Related Vulnerabilities CVE-2010-0488::Adversaries may attempt to make an executable or file difficult to discover or analyze by encrypting, encoding, or otherwise obfuscating its contents on the system or in transit. This is common behavior that can be used across different platforms and the network to evade defenses.::\",\n",
+    "                                                                                                      \"::173::172::180::181::73::74::20::697::692::\",\"TAXONOMY NAME:ATTACK:ENTRY ID:1027:ENTRY NAME:Obfuscated Files or Information::\",'NULL'])\n",
+    "\n",
+    "g.add_edge(781, 782)\n",
+    "g.add_edge(781, 783)\n",
+    "g.add_edge(781, 784)\n",
+    "g.add_edge(781, 785)\n",
+    "g.add_edge(781, 786)\n",
+    "g.add_edge(781, 787)\n",
+    "g.add_edge(781, 788)\n",
+    "g.add_edge(781, 789)\n",
+    "g.add_edge(781, 790)\n",
+    "g.add_edge(781, 791)\n",
+    "g.add_edge(781, 792)\n",
+    "g.add_edge(781, 793)\n",
+    "g.add_edge(781, 794)\n",
+    "g.add_edge(781, 795)\n",
+    "g.add_edge(781, 796)\n",
+    "g.add_edge(781, 797)\n",
+    "g.add_edge(781, 798)\n",
+    "g.add_edge(781, 799)\n",
+    "g.add_edge(781, 800)\n",
+    "\n",
+    "\n",
     "\n",
     "g.show('index.html')\n",
+    "\n",
     "\n"
    ]
   }
